// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document-blueprint-tree ancestors should get ancestor items 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "documentType": null,
        "flags": [],
        "hasChildren": true,
        "id": "00000000-0000-0000-0000-000000000000",
        "isFolder": true,
        "name": "_Test Folder Blueprint",
        "parent": null,
      },
      {
        "documentType": null,
        "flags": [],
        "hasChildren": false,
        "id": "00000000-0000-0000-0000-000000000000",
        "isFolder": false,
        "name": "_Test Child Blueprint",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
      },
    ],
  },
}
`;

exports[`document-blueprint-tree ancestors should handle non-existent item 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
  },
}
`;

exports[`document-blueprint-tree children should get child items 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "documentType": {
          "collection": null,
          "icon": "icon-home color-blue",
          "id": "00000000-0000-0000-0000-000000000000",
        },
        "flags": [],
        "hasChildren": false,
        "id": "00000000-0000-0000-0000-000000000000",
        "isFolder": false,
        "name": "_Test Child Blueprint",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
        },
      },
    ],
    "total": 1,
  },
}
`;

exports[`document-blueprint-tree children should handle non-existent parent 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [],
    "total": 0,
  },
}
`;
